--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hook-geolocation": "^1.1.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "swiper": "^9.3.2",
