--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@sweetalert2/theme-borderless": "^5.0.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +27,7 @@
     "react-hook-geolocation": "^1.1.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
+    "sweetalert2": "^11.7.5",
     "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
